--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -14,13 +14,13 @@ log4j.appender.AllAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} 
 log4j.rootLogger=INFO, AllAppender 
 
 log4j.appender.SuccessAppender=org.apache.log4j.FileAppender 
-log4j.appender.SuccessAppender.File= $${catalina.home}/logs/orcid-cornell-edu.SUCCESS.log
+log4j.appender.SuccessAppender.File= ${catalina.home}/logs/orcid-cornell-edu.SUCCESS.log
 log4j.appender.SuccessAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.SuccessAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.SUCCESS=INFO, SuccessAppender 
 
 log4j.appender.ProblemAppender=org.apache.log4j.FileAppender 
-log4j.appender.ProblemAppender.File= $${catalina.home}/logs/orcid-cornell-edu.PROBLEM.log
+log4j.appender.ProblemAppender.File= ${catalina.home}/logs/orcid-cornell-edu.PROBLEM.log
 log4j.appender.ProblemAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.ProblemAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.PROBLEM=INFO, ProblemAppender 
