--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,15 @@
 	</listener>
 
 	<filter>
+		<filter-name>StartupErrorFilter</filter-name>
+		<filter-class>edu.cornell.mannlib.oce.filters.StartupErrorFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>StartupErrorFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<filter>
 		<filter-name>FakeLoginFilter</filter-name>
 		<filter-class>edu.cornell.mannlib.oce.filters.FakeLoginFilter</filter-class>
 	</filter>
