Finished with the first draft, including logic and templates.

--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -18,9 +18,15 @@ log4j.appender.SuccessAppender.File= ${catalina.home}/logs/orcid-cornell-edu.SUC
 log4j.appender.SuccessAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.SuccessAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.SUCCESS=INFO, SuccessAppender 
+log4j.additivity.SUCCESS=false
 
 log4j.appender.ProblemAppender=org.apache.log4j.FileAppender 
 log4j.appender.ProblemAppender.File= ${catalina.home}/logs/orcid-cornell-edu.PROBLEM.log
 log4j.appender.ProblemAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.ProblemAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.PROBLEM=INFO, ProblemAppender 
+log4j.additivity.PROBLEM=false
+
+#log4j.logger.edu.cornell.mannlib.oce.servlets=DEBUG
+#log4j.logger.edu.cornell.mannlib.orcidclient.auth=DEBUG
+
