--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,9 +36,8 @@
 		<servlet-name>MainController</servlet-name>
 		<url-pattern>/main/*</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>MainController</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
 
+	<welcome-file-list>
+		<welcome-file>main</welcome-file>
+	</welcome-file-list>
 </web-app>
