Set the logging locations in log4j.properties not orcid-cornell-edu.properties

--- a/conf/orcid-cornell-edu.properties
+++ b/conf/orcid-cornell-edu.properties
@@ -5,11 +5,7 @@ PUBLIC_API_BASE_URL     = https://pub.orcid.org/v1.2/
 OAUTH_AUTHORIZE_URL     = https://orcid.org/oauth/authorize
 OAUTH_TOKEN_URL         = https://api.orcid.org/oauth/token
 CLIENT_ID               = 0000-0003-0471-9234
-CLIENT_SECRET           = 
+CLIENT_SECRET           = 88c75f9c-0f97-49aa-a047-11d7d640928c
 MESSAGE_VERSION         = 1.2
 CALLBACK_PATH           = main/callback
 WEBAPP_BASE_URL         = https://orcid.cornell.edu/
-
-logfile.success         = /cul/log/tomcat/orcid-cornell-edu-SUCCESS.log
-logfile.problem         = /cul/log/tomcat/orcid-cornell-edu-PROBLEM.log
-
