--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -1,12 +1,11 @@
 #
 # Set all loggers at INFO level, and write to a file in the Tomcat log directory.
 #
-# Note: when the app is initialized the special loggers SUCCESS and PROBLEM will
-# be modified to write to files specified in the settings.
-# 
- 
+# We use the .data extension for the success and problem (deny) outputs so that the
+# standard CUL-IT settings will not roll these logs.
+#
 log4j.appender.AllAppender=org.apache.log4j.RollingFileAppender 
-log4j.appender.AllAppender.File= ${catalina.home}/logs/orcid-cornell-edu.log
+log4j.appender.AllAppender.File=/cul/log/tomcat/orcid-cornell-edu.log
 log4j.appender.AllAppender.MaxFileSize=10MB 
 log4j.appender.AllAppender.MaxBackupIndex=10 
 log4j.appender.AllAppender.layout=org.apache.log4j.PatternLayout 
@@ -14,14 +13,14 @@ log4j.appender.AllAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} 
 log4j.rootLogger=INFO, AllAppender 
 
 log4j.appender.SuccessAppender=org.apache.log4j.FileAppender 
-log4j.appender.SuccessAppender.File= ${catalina.home}/logs/orcid-cornell-edu-SUCCESS.data
+log4j.appender.SuccessAppender.File=/cul/log/tomcat/orcid-cornell-edu-SUCCESS.data
 log4j.appender.SuccessAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.SuccessAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.SUCCESS=INFO, SuccessAppender 
 log4j.additivity.SUCCESS=false
 
 log4j.appender.ProblemAppender=org.apache.log4j.FileAppender 
-log4j.appender.ProblemAppender.File= ${catalina.home}/logs/orcid-cornell-edu-PROBLEM.log
+log4j.appender.ProblemAppender.File=/cul/log/tomcat/orcid-cornell-edu-PROBLEM.data
 log4j.appender.ProblemAppender.layout=org.apache.log4j.PatternLayout 
 log4j.appender.ProblemAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} [%c{1}] %m%n
 log4j.logger.PROBLEM=INFO, ProblemAppender 
